# glassnote

./: README.md  main.c  meson.build  render.c  seat.c  stroke.c
gnctl/: main.c
include/: glassnote.h  ipc.h  render.h  seat.h  stroke.h  utils.h
protocol/: meson.build
shared/: gnctl.h
src/: ipc.c  main.c  render.c  seat.c  stroke.c
